Fix footer on small screens
And make it look better on all screens in the process.

--- a/layouts/partials/scss/real-scss/footer.scss
+++ b/layouts/partials/scss/real-scss/footer.scss
@@ -2,18 +2,19 @@
   & .footer-links {
     @include normaltextlinks;
 
-    border-top: 2px solid $default-separator-color;
+    border-top: 4px ridge $default-separator-color;
     display: flex;
+    flex: 1 1 100%;
+    flex-flow: row wrap;
     justify-content: space-between;
     padding: .3em;
     text-align: center;
 
     span {
-      border-left: 2px solid $default-separator-color;
-      border-right: 2px solid $default-separator-color;
+      border: 3px ridge $default-separator-color;
       display: inline-block;
-      padding-left: .2em;
-      padding-right: .2em;
+      margin: .2em;
+      padding: .2em;
     }
   }
 }
